# -n-t-t-nghi-p

./: .gitignore  README.md  đatn_deliveryrobot_slam_nav2_AI.docx
src/delivery_robot_ai/: CMakeLists.txt  package.xml
src/delivery_robot_ai/src/: dieu_khien.py  llmbrain.py  robot_face_node.py
src/delivery_robot_bringup/: CMakeLists.txt  package.xml
src/delivery_robot_bringup/launch/: delivery_robot_nav_bringup  delivery_robot_slam_bringup
src/delivery_robot_controller/: CMakeLists.txt  package.xml
src/delivery_robot_controller/launch/: delivery_control_launch.py  lidar_launch.py
src/delivery_robot_controller/src/: hoverboard_bridge.py  hoverboard_node.cpp
src/delivery_robot_description/: package.xml  setup.py
src/delivery_robot_description/launch/: display.launch.py
src/delivery_robot_description/meshes/: delivery.STL
src/delivery_robot_description/urdf/: delivery_robot.urdf.xml
src/delivery_robot_navigation/: CMakeLists.txt  nav_to_pose_bt.xml  package.xml
src/delivery_robot_navigation/config/: bt_navigator_params.yaml  nav2_params.yaml
src/delivery_robot_navigation/launch/: bt_navigator.launch.py  global_planner.launch.py  local_planner.launch.py  map_amcl.launch.py  nav2_bringup.launch.py
src/delivery_robot_navigation/maps/: map_final.pbstream  map_hl.pbstream  map_lab.pbstream  my_map.pgm  my_map.yaml  my_map3.pgm  my_map3.yaml
src/delivery_robot_slam/: CMakeLists.txt  package.xml
src/delivery_robot_slam/config/: delivery_robot.lua  localization.lua
src/delivery_robot_slam/launch/: cartographer.launch.py  localization_launch.py
