<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delivery_robot_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nguyen-hoai-nam@todo.todo">nguyen-hoai-nam</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>delivery_robot_controller</exec_depend>
<exec_depend>delivery_robot_description</exec_depend>
<exec_depend>delivery_robot_slam</exec_depend>
<exec_depend>launch</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
