<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delivery_robot_controller</name>
  <version>0.0.0</version>
  <description>Bộ điều khiển tích hợp cho robot giao hàng, kết nối UART Hoverboard và xử lý Odom</description>
  <maintainer email="nguyen-hoai-nam@todo.todo">nguyen-hoai-nam</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Các gói phụ thuộc cốt lõi -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>sllidar_ros2</depend>

  <!-- BỔ SUNG: Các gói phục vụ cho dữ liệu /odom và hệ thống TF hình học -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
<depend>tf2_geometry_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>